# python-to-originlab

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
Documentation/: origin_sample.py
Documentation/MATLAB_Documentation/: CreatePlotInOrigin.m  MATLABCallOrigin.m  OriginPlotExample.m  OriginPlotXY.m  example_doubleY_plot.m  sendXYToOrigin.m  tester2.m
py2origin/: __init__.py
py2origin/OriginTemplates/: Custom.ogs  LTHistory.txt  MRFiles.ini  MenuCommands_E.txt  OIMG.INI  SYSTEM.CNF  template.xml
py2origin/OriginTemplates/Themes/AnalysisAndReportTable/: 0-DescStats-Last used.ois  0-FitLinear-Last used.ois  0-Fitexp-Last used.ois  0-Fitpeak-Last used.ois  0-addtool_quickfit-Last used.ois  0-batchProcess-Last used.ois  0-differentiate-Last used.ois  0-expGraph-ExportDossier.ois  0-expGraph-ExportMEML.ois  0-expGraph-ExportPNG.ois  0-expGraph-ExportPNGtoDesktop.ois  0-expGraph-Last used.ois  0-fft1-Last used.ois  0-fft_filters-Last used.ois  0-interp1-Last used.ois  0-interp1xy-Last used.ois  0-merge_graph-Last used.ois  0-merge_graph-merge_test_1.ois  0-pef_pptslide-Last used.ois  0-pfit2l-Last used.ois  0-rnormalize-Last used.ois  0-smooth-Last used.ois  0-speedmode-Last used.ois  0-template_saveas-Last used.ois  0-wtranspose-Last used.ois
py2origin/OriginTemplates/Themes/Graph/: Tableau10.oth  Tableau_ColorBlind.oth  Tableau_Light.oth  Tableau_Medium.oth  Wes_Darjeeling3.oth  YlOrRd.oth  (+16 more)
sample/: Communicating with origin examples.ipynb  Matplotlib_to_OriginLab_Examples.ipynb  Numpy_to_Originlab_example.ipynb
tests/: test_py2origin.py
