[tool.poetry]
name = "py2origin"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.6.3"
originext = "^1.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
