[tool.poetry]
name = "py2origin"
version = "0.1.2"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.6.3"
originext = "^1.2.0"
originpro = "^1.1.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"
pytest = "^7.2.1"
autopep8 = "^2.0.1"
astropy = "^5.2.1"
astropy-extension = {git = "https://github.com/y-marui/astropy-extension"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
